--- a/style.css
+++ b/style.css
@@ -2,18 +2,15 @@
 * {
   box-sizing: border-box;
 }
-
 html {
   font-size: max(0.833vw, 12px);
   scroll-behavior: smooth;
 }
-
 @media (max-width: 375.99px) {
   html {
-    font-size: max(0.750vw, 10px);
-  }
+    font-size: max(0.75vw, 10px);
+ }
 }
-
 body {
   margin: 0;
   height: 100vh;
@@ -22,48 +19,56 @@ body {
   font-family: "Special Elite", system-ui;
   font-weight: 400;
 }
-
 a {
   text-decoration: none;
 }
-
 ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-
-
 /* Utility Classes */
 .d-flex {
   display: flex;
 }
-
 .d-inline-flex {
   display: inline-flex;
 }
-
 .flex-column {
   flex-direction: column;
 }
-
-
 /* Button */
 .btn-primary {
   border: 1px solid transparent;
   padding: 1.3rem 2rem 1.2rem 2rem;
   cursor: pointer;
   border-radius: 0.5rem;
-  background-color: #F47216;
+  background-color: #f47216;
   color: #fff;
   transition: 0.3s;
   font-size: 1.5rem;
   line-height: 20px;
 }
-.btn-discover{
+.btn-discover {
   margin-top: 2rem;
+  animation: move 0.8s ease-in-out alternate infinite;
 }
-
+@-webkit-keyframes move {
+  from {
+    transform: translateY(0);
+ }
+  to {
+    transform: translateY(00.5rem);
+ }
+}
+@keyframes move {
+  from {
+    transform: translateY(0);
+ }
+  to {
+    transform: translateY(00.5rem);
+ }
+}
 /* Layout & Containers */
 .container {
   max-width: 87.5rem;
@@ -76,24 +81,14 @@ ul {
   width: 100%;
 }
 
-@media (min-width: 768px) {
-  .col-lg-6 {
-    width: 50%;
-  }
-}
-
 /* Sections */
 .banner {
-  background: url("images/bar10.jpg") no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background: url("images/bar-banner.jpg") no-repeat left / cover fixed;
   color: #fff;
-  background-position: left;
   height: 100vh;
   display: flex;
   flex-direction: column;
 }
-
 h1 {
   font-size: 6rem;
   text-transform: uppercase;
@@ -102,23 +97,19 @@ h1 {
   line-height: 8.125rem;
   text-shadow: 0px 3px 2px #ccc, 0px 8px 10px rgba(0, 0, 0, 0.15), 0px 12px 2px rgba(0, 0, 0, 0.7);
 }
-
 h2 {
   font-size: 2.5rem;
   width: 100%;
-  margin: 0;
+  margin: 0.25rem 0 0;
   line-height: 3rem;
 }
-
 .header {
   padding: 1.8rem;
   background: linear-gradient(black, transparent);
 }
-
 .logo {
   width: 5rem;
 }
-
 .nav {
   display: block;
   background: #fff;
@@ -131,17 +122,17 @@ h2 {
   transform: translateX(-50%);
   border-radius: 0.938rem;
 }
-
 .nav .nav-item:last-child .nav-link {
   border: 0;
   padding-bottom: 0;
 }
-
+.nav .nav-item:first-child .nav-link {
+  padding-top: 0;
+}
 .nav-item {
   font-size: 1.2rem;
   padding: 0 1rem;
 }
-
 .nav-link {
   color: #000;
   text-decoration: none;
@@ -150,59 +141,34 @@ h2 {
   display: block;
   border-bottom: 1px solid #ddd;
 }
-
 .hamburger_menu {
   background: transparent;
   border: none;
   cursor: pointer;
 }
-
 .nav.hidden-sm {
   display: none;
-}
-
-footer {
-  padding: 2rem;
-}
-
-.footer_links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-.footer_links a {
-  color: #F47216;
-  text-decoration: underline;
 }
 
 /* responsive css */
 @media (min-width: 1024px) {
   .header {
     padding: 1.8rem 0;
-  }
-
+ }
   .banner {
     background-position: initial;
-  }
-
+ }
   h1 {
-      font-size: 8rem;
-      line-height: 9.375rem;
-  }
-
+    font-size: 8rem;
+    line-height: 9.375rem;
+ }
   .hamburger_menu {
     display: none;
-  }
-
+ }
   .nav {
     display: flex;
     align-items: center;
-  }
-
+ }
   .nav-link {
     padding: 1rem 0;
     color: #fff;
@@ -210,13 +176,11 @@ footer {
     font-size: 1.5rem;
     border-bottom: 2px solid transparent;
     transition: 0.3s;
-  }
-
+ }
   .nav-link:hover {
     border-color: #f47216;
     transition: 0.3s;
-  }
-
+ }
   .nav {
     background: transparent;
     width: unset;
@@ -227,48 +191,41 @@ footer {
     padding: 0;
     z-index: 2;
     transform: initial;
-  }
-
+ }
   .nav.hidden-sm {
     display: flex;
-  }
-
+ }
   .nav .nav-item:last-child .nav-link {
     padding-bottom: 1rem;
     border-bottom: 2px solid transparent;
-  }
-
-  .nav .nav-item:last-child:hover .nav-link {
-    border-bottom: 2px solid #F47216;
-  }
+ }
+ .nav .nav-item:first-child .nav-link {
+    padding-top: 1rem;
 }
-
-
+  .nav .nav-item:last-child:hover .nav-link {
+    border-bottom: 2px solid #f47216;
+ }
+}
 /* age gate modal css */
-.content_wrap{
+.content_wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0 2rem;
 }
-
 .hidden {
   overflow: hidden;
 }
-.hidden:after {
-  content: '';
-  /* background: #00000087; */
-  background: url("images/home-bg.jpg");
-  background-size: 100%;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 2;
-  /* backdrop-filter: blur(0.938rem); */
+.hidden .website-main {
+  display: none;
 }
-
+.hidden:after {
+  content: "";
+  background: url("images/home-bg.jpg") no-repeat 0 0 / 100%;
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+}
 .modal {
   display: none;
   position: fixed;
@@ -290,44 +247,55 @@ footer {
   margin: auto;
   border-radius: 2rem;
   color: #000;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 1.563rem 0 rgba(0,0,0,0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 1.563rem 0 rgba(0, 0, 0, 0.19);
 }
-
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0;
+ }
+  to {
+    top: 0;
+    opacity: 1;
+ }
 }
-
 @keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0;
+ }
+  to {
+    top: 0;
+    opacity: 1;
+ }
 }
-
 .age_icon {
   width: 6.25rem;
 }
 .modal-header {
+  position: relative;
   text-align: center;
   color: #fff;
   padding: 3.2rem 1.563rem;
   border-radius: 2rem 2rem 0 0;
-  background: #1a2a6c;  
-  background: -webkit-linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);  
-  background: linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c); 
+  background: #1a2a6c;
+  background: -webkit-linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);
+  background: linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);
 }
 .modal-body {
   font-family: "Roboto Condensed", sans-serif;
   padding: 2rem;
 }
-.modal-body h3{
+.modal-body h3 {
   font-weight: 400;
   font-size: 1.5rem;
   margin-bottom: 2rem;
+  line-height: 2.5rem;
 }
-.age-check-form{
+.age-check-form {
   display: inline-block;
 }
-.input-label{
+.input-label {
   display: block;
   font-weight: 600;
   font-size: 1.125rem;
@@ -341,20 +309,21 @@ footer {
   display: block;
   margin-bottom: 2rem;
   min-width: 20rem;
+  min-height: 2.813rem;
+  cursor: pointer;
 }
-.modal-body .btn-primary{
+.modal-body .btn-primary {
+  display: block;
   border-radius: 0.5rem;
-  margin-top: 2rem;
+  margin: 2rem auto 0;
   padding: 1rem 3rem;
   font-size: 1.25rem;
 }
-
 .check-wrapper {
   position: relative;
   font-size: 1.25rem;
   cursor: pointer;
 }
-
 .check-wrapper .check-icon {
   position: absolute;
   display: block;
@@ -365,66 +334,77 @@ footer {
   border: 0.125rem solid orange;
   border-radius: 0.375rem;
 }
-
 .check-wrapper input {
   opacity: 0;
   height: 1.563rem;
   width: 1.563rem;
 }
-.check-label{
+.check-label {
   user-select: none;
 }
 .check-wrapper .checkbox:checked + .check-icon {
-  border-color: #FF6363;
+  border-color: #ff6363;
   background: url("images/check.svg") no-repeat;
   background-position: center;
   background-size: 82%;
 }
-.modal-header.error{
+.error-block {
+  border: 1px solid #000;
   flex-direction: column;
   justify-content: center;
   padding: 0;
   position: absolute;
   top: 0;
+  left: 0;
+  border-radius: inherit;
   height: 0;
   width: 100%;
   opacity: 0;
   background: #000;
   animation: animate-top 0.3s forwards;
 }
-
-.modal-header.error p{
+.error-block p {
   font-size: 1.8rem;
   margin: 0;
 }
-.modal-header.error p:first-child{
-  margin-bottom: 0.188rem;
+.error-block p:first-child {
+  margin-bottom: 0.5rem;
 }
-
-
+.error-block p:last-child {
+  font-size: 1.4rem;
+  line-height: 2rem;
+}
 @-webkit-keyframes animate-top {
-  from {height:0; opacity:0} 
-  to {height:9.5rem; opacity:1}
+  from {
+    height: 0;
+    opacity: 0;
+ }
+  to {
+    height: 100%;
+    opacity: 1;
+ }
 }
-
 @keyframes animate-top {
-  from {height:0; opacity:0}
-  to {height:9.5rem; opacity:1}
+  from {
+    height: 0;
+    opacity: 0;
+ }
+  to {
+    height: 100%;
+    opacity: 1;
+ }
 }
-
-
 @media (min-width: 768px) {
-  .modal{
+  .modal {
     width: 75%;
-  }
+ }
 }
-
 @media (min-width: 1024px) {
-  h2{
+  h2 {
     font-size: 2.5rem;
     line-height: normal;
-  }
-  .modal{
-    width: 40%;
-  }
+ }
+  .modal {
+    width: 43%;
+ }
 }
