--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h1 {
   text-shadow: 0px 3px 2px #ccc, 0px 8px 10px rgba(0, 0, 0, 0.15), 0px 12px 2px rgba(0, 0, 0, 0.7);
 }
 h2 {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   width: 100%;
   margin: 0.25rem 0 0;
   line-height: 3rem;
@@ -311,6 +311,8 @@ h2 {
   min-width: 20rem;
   min-height: 2.813rem;
   cursor: pointer;
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
 }
 .modal-body .btn-primary {
   display: block;
