--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ h2 {
 }
 .hidden:after {
   content: "";
-  background: url("images/home-bg.jpg") no-repeat 0 0 / 100%;
+  background: url("images/home-bg.jpg") no-repeat top center / cover;
   position: absolute;
   inset: 0;
   z-index: 2;
@@ -230,7 +230,7 @@ h2 {
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 6.25rem;
+  padding: 6.25rem 0;
   left: 50%;
   transform: translateX(-50%);
   top: 0;
@@ -239,6 +239,8 @@ h2 {
   z-index: 3;
   -webkit-animation: animatetop 0.4s;
   animation: animatetop 0.4s;
+  height: 100%;
+  overflow: auto;
 }
 .modal-content {
   position: relative;
